add add clearStageImg

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Leo HOME--> 
     <nav id="BGtopstart">
       <div id="head" align="right">
-        <a href="#BGtopstart" ><img src="img/top.jpeg" align="left" height="40"></a>
+        <a href="#BGtopstart" ><img src="img/final_robot.png" align="left" height="40"></a>
         <a href="#BGtopstart" ><button class="homepage">Home</button></a>
         <a href="#headhtp" ><button class="homepage">How</button></a>
       </div>
