--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
 
 
     <!-- Leo HOME--> 
-    <nav id="BGtopstart">
+    <nav id="BGtopstart" >
       <div id="head" align="right">
         <a href="#BGtopstart" ><img src="img/final_robot.png" align="left" height="40"></a>
         <a href="#BGtopstart" ><button class="homepage">Home</button></a>
-        <a href="#headhtp" ><button class="homepage">How</button></a>
+        <a href="#spaceHowtoplay" ><button class="homepage">How</button></a>
       </div>
     </nav>
     <nav id="BGstart">
       <hr>
-      <p id="center">.</p>
+      <p id="center">&nbsp;</p>
       <p align="center" id="Heading">MINI GAME</p>
       <p align="center" id="Heading2">FOR LEARNING C++</p>
       <center><button id="startbutton">start</button></center>
@@ -30,18 +30,18 @@
 
 
     <!--farsai How to play -->
-    <nav id="spaceHowtoplay">.</nav>
+    <nav id="spaceHowtoplay">&nbsp;</nav>
     <nav id="background_howtoplay">
       <p align="center" id="headtext_howtoplay">How to play</p>
       <nav id="spaceATHowtoplay2">.</nav>
       <div id="boxtext_howtoplay">
-        สวัสดีนักบินอวกาศเเห่ง CEDT ทุกท่าน<br />เนื่องด้วยหุ่นยนต์ส่วนตัวของหัวหน้ากองบัญชาการ
-        grader.nattee<br />ที่ชื่อว่า “little robot”
-        ได้เขียนโปรเเกรมเเก้ไขปัญหา<br />ด้วยภาษา C++ ผิดพลาด
+        สวัสดีนักบินอวกาศเเห่ง CEDT ทุกท่าน เนื่องด้วยหุ่นยนต์ส่วนตัวของหัวหน้ากองบัญชาการ
+        grader.nattee ที่ชื่อว่า<br /> “little robot”
+        ได้เขียนโปรเเกรมเเก้ไขปัญหา ด้วยภาษา C++ ผิดพลาด
         ทำให้ต้องไปศึกษาและเรียนรู้เนื้อหาจากดาวต่างๆ
-        <br />คุณจึงได้รับภารกิจป้อนคำสั่งที่ถูกต้องของ
-        <br />little robot กลับมาก่อนที่ท่านหัวหน้าจะโกรธ<br />เเละให้ U วิชา
-        computer programming เเก่คุณ
+        คุณจึงได้รับภารกิจป้อนคำสั่งที่ถูกต้องของ
+        little robot กลับมาก่อนที่ท่านหัวหน้าจะโกรธ เเละให้ U วิชา
+        <br />computer programming เเก่คุณ
       </div>
       <button id="nextbutton_howtoplay">next</button>
       <p id="spaceHowtoplay3">.</p>
@@ -49,7 +49,9 @@
 
 
     <!--sommm Username-->
+
     <nav id = "background-som">
+      <nav id="spaceHowtoplaysom">&nbsp;</nav>
       <main id="main-holder">
         </div>
         <div id = "Yellow">
@@ -99,14 +101,14 @@
             </div>
         </aside>
         <aside class="BGhint">
-          <div id="hint" align = "center" ></div>
+          <div id="hint" align="center"></div>
         </aside>
       </nav>  
 
 
   <!--Pie Score-->
     <nav id="BGWIN">
-      <p id="spaceHowtoplay3">.</p>
+      <p id="spaceHowtoplay3">&nbsp;</p>
       <section  align="center" id="boxsd">
         <section id="boxTotle">
           <p align="center" id="congreat">กรุณาตอบคำถาม</p>
