--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
     <!-- Leo HOME--> 
     <nav id="BGtopstart" >
       <div id="head" align="right">
-        <a href="#BGtopstart" ><img src="img/final_robot.png" align="left" height="40"></a>
+        <img src="img/IMG_2766.jpeg" align="left" height="45">
         <a href="#BGtopstart" ><button class="homepage">Home</button></a>
         <a href="#spaceHowtoplay" ><button class="homepage">How</button></a>
       </div>
     </nav>
     <nav id="BGstart">
-      <hr>
+      
       <p id="center">&nbsp;</p>
       <p align="center" id="Heading">MINI GAME</p>
       <p align="center" id="Heading2">FOR LEARNING C++</p>
@@ -33,7 +33,7 @@
     <nav id="spaceHowtoplay">&nbsp;</nav>
     <nav id="background_howtoplay">
       <p align="center" id="headtext_howtoplay">How to play</p>
-      <nav id="spaceATHowtoplay2">.</nav>
+      <nav id="spaceATHowtoplay2">&nbsp;</nav>
       <div id="boxtext_howtoplay">
         สวัสดีนักบินอวกาศเเห่ง CEDT ทุกท่าน เนื่องด้วยหุ่นยนต์ส่วนตัวของหัวหน้ากองบัญชาการ
         grader.nattee ที่ชื่อว่า<br /> “little robot”
@@ -44,7 +44,7 @@
         <br />computer programming เเก่คุณ
       </div>
       <button id="nextbutton_howtoplay">next</button>
-      <p id="spaceHowtoplay3">.</p>
+      <p id="spaceHowtoplay3">&nbsp;</p>
     </nav>
 
 
