change how to play

--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,11 @@
       <p align="center" id="headtext_howtoplay">How to play</p>
       <nav id="spaceATHowtoplay2">&nbsp;</nav>
       <div id="boxtext_howtoplay">
-        สวัสดีนักบินอวกาศเเห่ง CEDT ทุกท่าน เนื่องด้วยหุ่นยนต์ส่วนตัวของหัวหน้ากองบัญชาการ
-        grader.nattee ที่ชื่อว่า<br /> “little robot”
-        ได้เขียนโปรเเกรมเเก้ไขปัญหา ด้วยภาษา C++ ผิดพลาด
-        ทำให้ต้องไปศึกษาและเรียนรู้เนื้อหาจากดาวต่างๆ
-        คุณจึงได้รับภารกิจป้อนคำสั่งที่ถูกต้องของ
-        little robot กลับมาก่อนที่ท่านหัวหน้าจะโกรธ เเละให้ U วิชา
-        <br />computer programming เเก่คุณ
+        สวัสดีนักบินอวกาศเเห่ง CEDT ทุกท่าน เนื่องด้วยหุ่นยนต์ส่วนตัวของหัวหน้ากองบัญชาการ 
+        grader.nattee  ที่ชื่อว่า “little robot”ได้รับภารกิจให้ไปเขียนโปรแกรมC++
+        ตามดวงดาวต่างๆ คุณจึงมีหน้าที่ช่วย โดยการเลือกคำสั่งchoiceที่ถูกต้องและ
+        กดanswer หลังจากทำภารกิจดาวนั้นเสร็จให้กดenterเพื่อไปยังดาวถัดไป 
+        แต่หัวหน้ากองบัญชาการยังใจดีมีปุ่มhintเป็นคำใบ้ในข้อนั้นๆ คุณจะใช้หรือไม่ใช้ก็ได้ 
       </div>
       <button id="nextbutton_howtoplay">next</button>
       <p id="spaceHowtoplay3">&nbsp;</p>
