final jing jing la

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <!-- Leo HOME--> 
     <nav id="BGtopstart" >
       <div id="head" align="right">
-        <img src="img/IMG_2766.jpeg" align="left" height="45">
+        <img src="img/IMG_2766.jpeg" align="left" height="45" style="border-radius: 15%;">
         <a href="#BGtopstart" ><button class="homepage">Home</button></a>
-        <a href="#spaceHowtoplay" ><button class="homepage">How</button></a>
+        <button id ="howButton" class="homepage">How</button></a>
       </div>
     </nav>
     <nav id="BGstart">
