--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- Leo HOME--> 
     <nav id="BGtopstart" >
       <div id="head" align="right">
-        <img src="img/IMG_2766.jpeg" align="left" height="45" style="border-radius: 15%;">
+        <img src="img/IMG_2766.jpeg" align="left" height="45" style="border-radius: 10%;">
         <a href="#BGtopstart" ><button class="homepage">Home</button></a>
         <button id ="howButton" class="homepage">How</button></a>
       </div>
@@ -86,7 +86,7 @@
             <div class="button-container">
               <button align="left" class="ButtonHint" id="ButtonHint" style="display: none;">Hint</button>
               <button align="center" class="AnsButton" id="ansbtn" style="display: none;">Answer</button>
-              <button align="right" class="EnterButton" id="enterbtn" style="display: none;">Enter</button>
+              <button align="right" class="EnterButton" id="enterbtn" style="display: none;">Next</button>
             </div>
           </div>
         </section>
